# robot-software

./: adapter.html  beacon.html  bootloader.html  index.html  intro.html  io.html  motor.html  presentation.html  print.html  searchindex.js  sensor.html
eurobot/arm-simulator/: Pendulum.py  pendulum.ipynb  plot.py
master-firmware/: Makefile  package.yml
master-firmware/src/: commands.c  config_chaos.c  config_order.c  gfxconf.h  gui.c  gui_utilities2.c  gui_utilities2.h  strategy.cpp
master-firmware/src/adafruit_display_driver/: board_hx8357.c
master-firmware/src/aversive/: CMakeLists.txt  oa.py
master-firmware/src/aversive/obstacle_avoidance/: obstacle_avoidance.c  obstacle_avoidance.h
master-firmware/src/base/: map.c  map.h
master-firmware/src/can/: sensor_handler.cpp
master-firmware/src/strategy/: breakpoints.c  breakpoints.h
proximity-beacon-firmware/src/: main.c
sensor-firmware/: Makefile  main.c  mcuconf.h  openocd.cfg  package.yml
sensor-firmware/src/: TCS3472.c  TCS3472.h  main.c  main.h
sensor-firmware/src/uavcan/: node.cpp
